--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -8,7 +8,7 @@ in_page_toc_max_heading_level: 2
 
 # Latest updates
 
-*Last updated 10 April 2025*
+*Last updated 24 April 2025*
 
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
@@ -29,6 +29,20 @@ Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime client](#latest-qiski
 
 This section summarizes the recent enhancements and new features for IBM Quantum Platform.
 
+**24 April 2025**
+
+- Instance limits: Individuals can view [available time and usage](https://quantum.cloud.ibm.com/instances), which displays alerts when approaching account or instance limits.
+- Admin permissions: Admins can view overall usage, cycle period, and remaining time per plan in the instances page.
+- Search: Search is now integrated and available for filtering documentation content including guides and API reference.
+- Billing: Standard/Pay-as-you-go users can find a link to billing by clicking the three dots on each instance on the [Instances](https://quantum.cloud.ibm.com/instances) page.
+- New sign-in option: Sign-in with Google now available on the [sign-in page](https://quantum.cloud.ibm.com/signin).
+- Bug fixes:
+  - Addressed failed batch sessions for Open Plan users
+  - Addressed batch sessions not closing properly
+  - Improved platform stability due to proper error handling and better recovery
+  - Addressed an issue that was preventing QPU metrics to be displayed for the QPUs in the eu-de region
+- Deprecation reminder: the deprecation date for IBM Quantum Platform Classic has been set for 1 July 2025. For more information, read the [migration guide](/docs/migration-guides/classic-iqp-to-cloud-iqp).
+
 <details>
 <summary><b>Previous updates</b></summary>
 
@@ -42,7 +56,7 @@ This section summarizes the recent enhancements and new features for IBM Quantum
 - Individuals who can view the analytics page can now filter the data to view information per plan.
 - Administrators can now more easily add multiple individuals to an access group due to the addition of an existing account members table.
 - Premium plan instance administrators can set the instance allocation as a usage limit, so that usage in those instances cannot exceed the time alloted. See the [Set instance allocation limits](/docs/guides/allocation-limits) guide for instructions.
-- Note that the sunset date for IBM Quantum Platform Classic has been set for 1 July, 2025. For more information, read the [migration guide.](/docs/migration-guides/classic-iqp-to-cloud-iqp)
+- Note that the sunset date for IBM Quantum Platform Classic has been set for 1 July 2025. For more information, read the [migration guide.](/docs/migration-guides/classic-iqp-to-cloud-iqp)
 
 **27 March 2025**
 
