--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -33,7 +33,7 @@ This section summarizes the recent enhancements and new features for IBM Quantum
 
 - Instance limits: Individuals can view [available time and usage,](https://quantum.cloud.ibm.com/instances) which displays alerts when approaching account or instance limits.
 - Administrator permissions: Administrators can view overall usage, cycle period, and remaining time per plan in the Instances page.
-- Search: Search is now integrated and available for filtering documentation content including guides and API reference.
+- Search: Search is now integrated and available for filtering documentation content, including guides and API references.
 - Billing: Standard/Pay-as-you-go users can find a link to billing by clicking the three dots on each instance on the [Instances](https://quantum.cloud.ibm.com/instances) page.
 - New sign-in option: Sign-in with Google now available on the [sign-in page](https://quantum.cloud.ibm.com/signin).
 - Bug fixes:
