--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -41,7 +41,7 @@ This section summarizes the recent enhancements and new features for IBM Quantum
   - Addressed batch sessions not closing properly
   - Improved platform stability by improving error handling and better recovery.
   - Addressed an issue that prevented QPU metrics to be displayed for the QPUs in the eu-de region.
-- Deprecation reminder: the deprecation date for IBM Quantum Platform Classic has been set for 1 July 2025. For more information, read the [migration guide](/docs/migration-guides/classic-iqp-to-cloud-iqp).
+- Deprecation reminder: The deprecation date for IBM Quantum Platform Classic has been set for 1 July 2025. For more information, read the [migration guide.](/docs/migration-guides/classic-iqp-to-cloud-iqp)
 
 <details>
 <summary><b>Previous updates</b></summary>
