--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -34,7 +34,7 @@ The instances that you can access are listed at the bottom of your [Account page
 <CloudContent>
 Access to IBM Quantum Platform services is controlled by the **instances** to which you are assigned. Users can belong to more than one instance at any given time.
 
-An instance is a deployment of Qiskit Runtime. You need a different instance for every service plan (Open or Standard) you use in every region that you want to use. The account manager and anyone with enough permission can create an instance and define its configuration, such as its allocations, usage limits, quantum computers, and user permissions. Each instance is identified by a unique CRN.  This CRN is used when sending workloads from your Qiskit programs.
+An instance is a deployment of Qiskit Runtime. You need a different instance for every service plan (Open or Standard) you use in every region that you want to use. The account manager and anyone with enough permission can create an instance and define its configuration, such as its allocations, usage limits, quantum computers, and user permissions. Each instance is identified by a unique Cloud Resource Name (CRN).  This CRN is used when sending workloads from your Qiskit programs.
 
 Users with a public account can create an instance in the [Open Plan](#open-plan). For organizations outside of IBM&reg;, the organization's administrator assigns users to instances.
 
@@ -120,7 +120,7 @@ An alert displays on an instance's usage when it has exceeded its allocation.
 You can specify an instance when initializing the service or when choosing a quantum computer.  You can copy the service-level code by clicking the three dots by the instance name on the Instances section of the [Account overview page](https://quantum.ibm.com/account).
 </LegacyContent>
 <CloudContent>
-You must use the Cloud Resource Name (CRN)  to specify an instance to use; either when initializing the service or when sending the workload to a QPU.  The instance's CRN is listed on the [Platform dashboard](https://quantum.cloud.ibm.com/). Before running the below code, follow the steps to [save an account.](/guides/cloud-setup#cloud-save)
+You must use the CRN to specify an instance to use; either when initializing the service or when sending the workload to a QPU.  The instance's CRN is listed on the [Platform dashboard](https://quantum.cloud.ibm.com/). Before running the below code, follow the steps to [save an account.](/guides/cloud-setup#cloud-save)
 </CloudContent>
 <LegacyContent>
 ```python
