tweaks for consistency

--- a/docs/tutorials/advanced-techniques-for-qaoa.ipynb
+++ b/docs/tutorials/advanced-techniques-for-qaoa.ipynb
@@ -254,7 +254,7 @@
     "### SWAP strategy with the SAT initial mapping\n",
     "We will demonstrate how to build and optimize QAOA circuits using the **SWAP strategy with SAT initial mapping**, a specifically designed transpiler pass for QAOA applied to quadratic problems.\n",
     "\n",
-    "In this example, we choose a SWAP insertion strategy for blocks of commuting two-qubit gates, which applies layers of SWAP gates simultaneously executable on the coupling map. This strategy is presented in [\\[1\\]](#references) and exposed as a standardized Qiskit transpiler pass (see [`Commuting2qGateRouter`](/docs/api/qiskit/qiskit.transpiler.passes.Commuting2qGateRouter)), where we can choose different qubit configurations. We use a line swap strategy in this example."
+    "In this example, we choose a SWAP insertion strategy for blocks of commuting two-qubit gates, which applies layers of SWAP gates simultaneously executable on the coupling map. This strategy is presented in [\\[1\\]](#references) and is exposed as a standardized Qiskit transpiler pass (see [`Commuting2qGateRouter`](/docs/api/qiskit/qiskit.transpiler.passes.Commuting2qGateRouter)), where we can choose different qubit configurations. We use a line swap strategy in this example."
    ]
   },
   {
@@ -297,7 +297,7 @@
     "\n",
     "The following code demonstrates how to use the `SATMapper` from Matsuo et al. to remap the graph. This process allows the problem to be mapped to a more optimal initial state for a specified SWAP strategy, resulting in a significant reduction in the number of SWAP layers required to execute the circuit.\n",
     "\n",
-    "In `SATMapper`, the problem of finding a good initial mapping is formulated as a SAT problem. A SAT solver is used to find such an initial mapping for the QAOA circuit. `python-sat` (`pysat` in short) is a Python library for a SAT solver, and we will use it to solve the SAT problem in this example."
+    "In `SATMapper`, the problem of finding a good initial mapping is formulated as a SAT problem. A SAT solver is used to find such an initial mapping for the QAOA circuit. `python-sat` (`pysat` for short) is a Python library for a SAT solver, and we will use it to solve the SAT problem in this example."
    ]
   },
   {
@@ -602,7 +602,7 @@
     "We only want to apply the SWAP strategies to the cost operator layer, so we start by creating the isolated block that we will later transform and append to the final QAOA circuit.\n",
     "\n",
     "For this, we can use the [`QAOAAnsatz`](/docs/api/qiskit/qiskit.circuit.library.QAOAAnsatz) class from Qiskit. We input an empty circuit to the `initial_state` and `mixer_operator` fields to make sure we are building an isolated cost operator layer.\n",
-    "We also define the edge_coloring map so that RZZGates are positioned next to SWAP gates. This strategic placement allows us to exploit CX cancellations, optimizing the circuit for better performance.\n",
+    "We also define the edge_coloring map so that RZZ gates are positioned next to SWAP gates. This strategic placement allows us to exploit CX cancellations, optimizing the circuit for better performance.\n",
     "This process is executed within the `create_qaoa_swap_circuit` function."
    ]
   },
@@ -616,7 +616,7 @@
     "def make_meas_map(circuit: QuantumCircuit) -> dict:\n",
     "    \"\"\"Return a mapping from qubit index (the key) to classical bit (the value).\n",
     "\n",
-    "    This allows us to account for the swapping order introduced by the SwapStrategy.\n",
+    "    This allows us to account for the swapping order introduced by the SWAP strategy.\n",
     "    \"\"\"\n",
     "    creg = circuit.cregs[0]\n",
     "    qreg = circuit.qregs[0]\n",
@@ -663,7 +663,7 @@
     "):\n",
     "    \"\"\"Applies QAOA layers to construct circuit.\n",
     "\n",
-    "    First, the initial state is applied. If `initial_state` is None we begin in the\n",
+    "    First, the initial state is applied. If `initial_state` is None, we begin in the\n",
     "    initial superposition state. Next, we alternate between layers of the cost operator\n",
     "    and the mixer. The cost operator is alternatively applied in order and in reverse\n",
     "    instruction order. This allows us to apply the swap strategy on odd `p` layers\n",
@@ -736,8 +736,8 @@
     "            gates. This allows us to choose an ordering such that `Rzz` gates will\n",
     "            immediately precede SWAP gates to leverage CNOT cancellation.\n",
     "        theta: The QAOA angles.\n",
-    "        qaoa_layers: The number of layers of the cost-operator and the mixer operator.\n",
-    "        initial_state: The initial state on which we apply layers of cost-operator\n",
+    "        qaoa_layers: The number of layers of the cost operator and the mixer operator.\n",
+    "        initial_state: The initial state on which we apply layers of cost operator\n",
     "            and mixer.\n",
     "        mixer: The QAOA mixer. It will be applied as is onto the QAOA circuit. Therefore,\n",
     "            its output must have the same ordering of qubits as its input.\n",
@@ -763,11 +763,11 @@
     "    # This will allow us to recover the permutation of the measurements that the swap introduce.\n",
     "    cost_layer.measure_all()\n",
     "\n",
-    "    # Now, apply the swap strategy for commuting pauli evolution gates\n",
+    "    # Now, apply the swap strategy for commuting Pauli evolution gates\n",
     "    cost_layer = apply_swap_strategy(cost_layer, swap_strategy, edge_coloring)\n",
     "\n",
     "    # Compute the measurement map (qubit to classical bit).\n",
-    "    # we will apply this for qaoa_layers % 2 == 1.\n",
+    "    # We will apply this for qaoa_layers % 2 == 1.\n",
     "    if qaoa_layers % 2 == 1:\n",
     "        meas_map = make_meas_map(cost_layer)\n",
     "    else:\n",
@@ -806,12 +806,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d6e71480-33fe-4843-b27d-04e55259e4d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can define the edge_coloring map so that RZZGates are positioned next to SWAP gates to exploit CX cancellations\n",
+    "# We can define the edge_coloring map so that Rzz gates are positioned next to SWAP gates to exploit CX cancellations\n",
     "# We use greedy edge coloring to color the edges of the graph in the rustworkx. This coloring is used to order the Rzz gates in the circuit.\n",
     "\n",
     "edge_coloring_idx = rx.graph_greedy_edge_color(graph_100)\n",
@@ -869,15 +869,7 @@
    "execution_count": null,
    "id": "ba981a4c-5f1a-48a5-b577-07f0cd3a9d44",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<IBMBackend('ibm_kyiv')>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pass_manager = generate_preset_pass_manager(\n",
     "    backend=backend,\n",
