copyedit first section

--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -13,39 +13,40 @@
     "\n",
     "## Background\n",
     "\n",
-    "The Qiskit AI-powered transpiler service (QTS) introduces machine learning-based optimizations in both routing and synthesis passes. These AI modes have been designed to tackle the limitations of traditional transpilation, particularly for large-scale circuits and complex hardware topologies.\n",
+    "The **Qiskit AI-powered transpiler service (QTS)** introduces machine learning-based optimizations in both routing and synthesis passes. These AI modes have been designed to tackle the limitations of traditional transpilation, particularly for large-scale circuits and complex hardware topologies.\n",
     "\n",
-    "Key Features of the AI-Powered Transpiler:\n",
-    "- Routing Passes: AI-powered routing can dynamically adjust qubit paths based on the specific circuit and backend, reducing the need for excessive SWAP gates.\n",
+    "### Key features of QTS\n",
+    "\n",
+    "- Routing passes: AI-powered routing can dynamically adjust qubit paths based on the specific circuit and backend, reducing the need for excessive SWAP gates.\n",
     "    - `AIRouting`: Layout selection and circuit routing\n",
     "\n",
-    "- Synthesis Passes: AI techniques optimize the decomposition of multi-qubit gates, minimizing the number of 2-qubit gates, which are typically more error-prone.\n",
+    "- Synthesis passes: AI techniques optimize the decomposition of multi-qubit gates, minimizing the number of two-qubit gates, which are typically more error-prone.\n",
     "    - `AICliffordSynthesis`: Clifford gate synthesis\n",
     "    - `AILinearFunctionSynthesis`: Linear function circuit synthesis\n",
     "    - `AIPermutationSynthesis`: Permutation circuit synthesis\n",
     "    - `AIPauliNetworkSynthesis`: Pauli Network circuit synthesis (only available in the Qiskit Transpiler Service, not in local environment)\n",
     "\n",
-    "Comparison with Traditional Transpilation: The standard Qiskit transpiler is a robust tool that can handle a broad spectrum of quantum circuits effectively. However, when circuits grow larger in scale or hardware configurations become more complex, the Qiskit AI-powered transpiler service (QTS) can deliver additional optimization gains. By leveraging learned models for routing and synthesis, QTS further refines circuit layouts and reduces overhead for challenging or large-scale quantum tasks.\n",
+    "- Comparison with traditional transpilation: The standard Qiskit transpiler is a robust tool that can handle a broad spectrum of quantum circuits effectively. However, when circuits grow larger in scale or hardware configurations become more complex, QTS can deliver additional optimization gains. By using learned models for routing and synthesis, QTS further refines circuit layouts and reduces overhead for challenging or large-scale quantum tasks.\n",
     "\n",
     "\n",
     "In this tutorial, we will evaluate the AI modes using both routing and synthesis passes, comparing the results to traditional transpilation to highlight where AI offers performance gains.\n",
     "\n",
-    "For more information on the details of QTS, please refer to the [documentation](https://docs.quantum.ibm.com/guides/ai-transpiler-passes).\n",
+    "For more details on QTS, please refer to the [documentation](/docs/guides/ai-transpiler-passes).\n",
     "\n",
     "\n",
-    "### Why Use AI for Quantum Circuit Transpilation?\n",
+    "### Why use AI for quantum circuit transpilation?\n",
     "\n",
     "As quantum circuits grow in size and complexity, traditional transpilation methods struggle to optimize layouts and reduce gate counts efficiently. Larger circuits, particularly those involving hundreds of qubits, impose significant challenges on routing and synthesis due to device constraints, limited connectivity, and qubit error rates.\n",
     "\n",
     "This is where AI-powered transpilation offers a potential solution. By leveraging machine learning techniques, the AI-powered transpiler in Qiskit can make smarter decisions about qubit routing and gate synthesis, leading to better optimization of large-scale quantum circuits.\n",
     "\n",
-    "### Brief Benchmarking Results\n",
+    "### Brief benchmarking results\n",
     "![Graph showing AI transpiler performance against Qiskit](/docs/images/tutorials/ai-transpiler-introduction/ai-transpiler-benchmarks.avif)\n",
     "\n",
     "\n",
-    "In benchmarking tests, the Qiskit AI-powered transpiler service (QTS) consistently produced shallower, higher-quality circuits compared to the standard Qiskit transpiler. For these tests, we used Qiskit’s default pass manager strategy—configured via the [`generate_preset_passmanager`](https://docs.quantum.ibm.com/api/qiskit/transpiler_preset). While this default strategy is often effective, it can struggle with larger or more complex circuits. By contrast, QTS’s AI-powered passes achieved an average 24% reduction in 2-qubit gate counts and a 36% reduction in circuit depth for large circuits (100+ qubits) when transpiling to the heavy hex topology of IBM Quantum hardware. For more information on these benchmarks, please refer to the following blog post [\\[1\\]](#references).\n",
+    "In benchmarking tests, QTS consistently produced shallower, higher-quality circuits compared to the standard Qiskit transpiler. For these tests, we used Qiskit’s default pass manager strategy,configured with [`generate_preset_passmanager`](/docs/api/qiskit/transpiler_preset). While this default strategy is often effective, it can struggle with larger or more complex circuits. By contrast, QTS’s AI-powered passes achieved an average 24% reduction in two-qubit gate counts and a 36% reduction in circuit depth for large circuits (100+ qubits) when transpiling to the heavy-hex topology of IBM Quantum&reg; hardware. For more information on these benchmarks, please refer to the [blog.](https://www.ibm.com/quantum/blog/qiskit-performance)\n",
     "\n",
-    "In this notebook, we will explore the key benefits of Qiskit AI-powered transpiler service and how it compares to traditional methods."
+    "In this notebook, we will explore the key benefits of QTS and how it compares to traditional methods."
    ]
   },
   {
@@ -73,7 +74,7 @@
     "\n",
     "Before starting this tutorial, ensure that you have the following installed:\n",
     "\n",
-    "* Qiskit SDK 1.0 or later, with visualization support (`pip install 'qiskit[visualization]'`)\n",
+    "* Qiskit SDK v1.0 or later, with visualization support (`pip install 'qiskit[visualization]'`)\n",
     "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
     "* Qiskit IBM Transpiler (`pip install qiskit-ibm-transpiler`)\n",
     "* Qiskit IBM AI Local Transpiler (`pip install qiskit_ibm_ai_local_transpiler`)"
@@ -1101,16 +1102,6 @@
     "While QTS often delivers significant improvements in gate count and circuit depth, overall transpilation performance can vary based on circuit size, connectivity, and runtime constraints. Larger or more complex circuits may still incur additional transpilation time or require specialized configurations.\n",
     "\n",
     "For the latest and most detailed information about QTS constraints, please refer to the [QTS Limitations documentation](https://docs.quantum.ibm.com/guides/qiskit-transpiler-service#limits-of-the-qiskit-transpiler-service)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7e9a5978-c8c7-479d-9d49-9a6d5f99a6e0",
-   "metadata": {},
-   "source": [
-    "## References\n",
-    "\n",
-    "[1] IBM Quantum. \"Qiskit Performance and Scaling: A Closer Look.\" IBM Quantum Blog, https://www.ibm.com/quantum/blog/qiskit-performance."
    ]
   },
   {
