--- a/docs/guides/fractional-gates.ipynb
+++ b/docs/guides/fractional-gates.ipynb
@@ -59,6 +59,7 @@
     "backend = service.backend('ibm_torino', use_fractional_gates=True)\n",
     "```\n",
     "\n",
+    "\n",
     "This code example demonstrates how to use fractional gates in the context of a workflow that simulates the dynamics of an Ising chain using fractional gates. The circuit duration is then compared against a backend that does not use fractional gates.\n",
     "\n",
     "<Admonition title=\"Note about reported error rates\" type=\"note\">\n",
@@ -218,6 +219,16 @@
     "    time_range=(0, 500),\n",
     "    style=IQXSimple(),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76f9f94e-f402-4519-b991-708b74a4f88c",
+   "metadata": {},
+   "source": [
+    "### Angle constraints\n",
+    "\n",
+    "For the two-qubit $R_{ZZ}(\\theta)$ gate, only angles between $0$ and $\\pi/2$ can be executed on IBM Quantum hardware. If a circuit contains any $R_{ZZ}(\\theta)$ gates with an angle outside of this range, then the standard transpilation pipeline will generally correct this with an appropriate circuit transformation (through the [`FoldRzzAngle`](../api/qiskit-ibm-runtime/transpiler-passes-fold-rzz-angle) pass).  However, for any $R_{ZZ}(\\theta)$ gate containing one or more [`Parameter`](../api/qiskit/qiskit.circuit.Parameter)s, the transpiler will assume these parameters will be assigned angles within this range at runtime. The job will fail if any of the parameter values specified in the PUB submitted to Qiskit Runtime are outside of this range."
    ]
   },
   {
