--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -20,7 +20,7 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 Access to IBM Quantum Platform services is controlled by the **instances** (previously called providers) to which you are assigned. An instance is defined by a hierarchical organization of **hub**, **group**, and **project**. A hub is the top level of a given hierarchy (organization) and contains within it one or more groups. These groups are in turn populated with projects. The combination of hub/group/project is called an instance. Users can belong to more than one instance at any given time.
 
 <Admonition type="note">
-  IBM Cloud&reg; instances are different from IBM Quantum Platform instances.  IBM Cloud does not use the hub/group/project structure for user management. This section describes instances in IBM Quantum Platform. To view and create IBM Cloud instances, visit the [IBM Cloud Quantum Instances page](https://cloud.ibm.com/quantum/instances). Click the name of an instance to see details such as your CRN for that instance, what compute resources are available to you by using that instance, and what jobs you have run on that instance.
+  IBM Cloud&reg; instances are different from IBM Quantum Platform instances.  IBM Cloud does not use the hub/group/project structure for user management. This section describes instances in IBM Quantum Platform. To view, create, and edit IBM Cloud instances, visit the [IBM Cloud Quantum Instances page](https://cloud.ibm.com/quantum/instances). Click the name of an instance to see details such as your CRN for that instance, what compute resources are available to you by using that instance, and what jobs you have run on that instance.
 </Admonition>
 
 ![Alice, Bob, and Charlie are all in Hub A.  Hub A has Group 1 and 2.  Alice and Bob are in Group 1.  Charlie is in Group 2.  Group 1 has Project X and Y.  Alice is in both projects.  Bob is only in project X.  Group 2 has Project Z.  Charlie is in project Z.  Therefore, Charlie's instance is Hub-A/Group-2/Project-Z.](/docs/images/guides/instances/providers1.avif "Hub / group / project hierarchy")
@@ -36,7 +36,7 @@ Access to IBM Quantum Platform services is controlled by the **instances** to wh
 
 An instance is a deployment of Qiskit Runtime. You need a different instance for every service plan (such as Open or Standard) you use in every region that you want to use. The account manager and anyone with enough permission can create an instance and define its configuration, such as its allocations, usage limits, quantum computers, and user permissions. Each instance is identified by a unique Cloud Resource Name (CRN).  This CRN is used when sending workloads from your Qiskit programs.
 
-The IBM Quantum Platform [dashboard](https://quantum.cloud.ibm.com/) displays the instances to which you have access.
+The IBM Quantum Platform [dashboard](https://quantum.cloud.ibm.com/) displays the instances to which you have access.  You can view full details, edit, and delete instances on the [Instances page.](https://quantum.cloud.ibm.com/instances)
 
 It is important that you understand which instance you are using, because all instances that are not associated with the Open Plan incur a cost.
 </CloudContent>
@@ -53,15 +53,13 @@ By default, users who sign up for an IBM Quantum account are assigned to the Ope
 Those using the Open Plan instance have up to 10 minutes total of quantum time per month, which resets at 00:00:00 UTC on the first of each calendar month. Open Plan users can track their usage on the [Platform dashboard,](https://quantum.ibm.com/) [Workloads,](https://quantum.ibm.com/workloads) and [Account](https://quantum.ibm.com/account) pages.
 
 After you have an IBM Cloud&reg; account, you can create an instance in the Open Plan and access up to 10 minutes total of quantum time for free per 28-day rolling window.
-</CloudContent>
 
-<CloudContent>
 <span id="standard-plan"></span>
 ## Standard Plan instance
 
 By default, users who sign up for an IBM Quantum account are assigned to the Standard Plan, which is a paid plan. To use this plan, you must create an instance and assign it to the plan. All workloads sent to QPUs by using this plan incur a charge.
 </CloudContent>
-
+<LegacyContent>
 ## View your instances
 
 You can see information about your instances programmatically or in the user interface.
@@ -72,38 +70,25 @@ You can use [the `instances()` method](../api/qiskit-ibm-runtime/qiskit-runtime-
 
 <span id="switch-instances"></span>
 ### View instances on IBM Quantum Platform
-<LegacyContent>
-The IBM Quantum Platform dashboard, Compute resources, and Workloads pages display information such as usage metrics, workloads, and quantum computers based on your instance. If you have access to multiple instances, use the dropdown in the menu bar to switch between instances.
-</LegacyContent>
-<CloudContent>
-The IBM Quantum Platform [dashboard](https://quantum.cloud.ibm.com/), [Compute resources](https://quantum.cloud.ibm.com/computers), and [Workloads](https://quantum.cloud.ibm.com/workloads) pages display information such as usage metrics, workloads and quantum computers based on your account. If you have access to multiple accounts, use the dropdown in the menu bar to switch between accounts.
 
-</CloudContent>
-<LegacyContent>
+The IBM Quantum Platform dashboard, Compute resources, and Workloads pages display information such as usage metrics, workloads, and quantum computers based on your instance. If you have access to multiple instances, use the dropdown in the menu bar to switch between instances.
+
 <Admonition type="note">
  The instance switcher does not appear in the Administration application.
  </Admonition>
 
 If you switch to a different instance, it is remembered the next time you log on and, assuming that it's still a valid instance, information pertaining to that instance is displayed.  By default, the first premium instance you have access to is used.  If you do not have any premium instances, the first (alphabetically) open instance is shown.
-</LegacyContent>
-<CloudContent>
-<Admonition type="note">
- Administrators can filter analytics data by instance (as well as by other options) by choosing specific parameters in the Filters card on the [Analytics](https://quantum.cloud.ibm.com/analytics) page.
- </Admonition>
- </CloudContent>
- <LegacyContent>
+
 ## How jobs relate to instances
 
 When you execute a task using an IBM Quantum service (for example, sending circuits to a quantum computer), a **job** instance is returned to you. Regardless of which service is being used, a job can track the progress of the submission through IBM Quantum, and retrieve the final computation results. Because services are coupled to instances, the jobs created from these services are also tied to the specific instance being used. Therefore, **if a user is removed from an instance, their jobs and the associated results are no longer accessible**.
-</LegacyContent>
-
 
 ## How usage affects job priority within an instance
-<LegacyContent>
+
 *This section applies to Premium Plan users only, since their access includes multiple instances.*
-</LegacyContent>
+
 When determining which jobs to run, the [fair-share scheduler](/docs/guides/fair-share-scheduler) takes into account an instance's [usage](/docs/guides/estimate-job-run-time) compared to its allocation. For example, an instance with a large allocation that has already run many jobs, or has run one very long job, might have a lower priority when compared to an instance with a smaller allocation but very low usage.
-<LegacyContent>
+
 The jobs you run and the jobs run by other collaborators in the same instance count toward the reported usage for that instance. You can see the usage for an instance on your [dashboard](https://quantum.ibm.com/) (use the [instance switcher](#switch-instances) at the top of the page to change which instance is reflected on your dashboard).
 </LegacyContent>
 <CloudContent>
@@ -118,11 +103,7 @@ An alert displays on an instance's usage when it has exceeded its allocation.
 ## Specify an instance in your code
 <LegacyContent>
 You can specify an instance when initializing the service or when choosing a quantum computer.  You can copy the service-level code by clicking the three dots by the instance name on the Instances section of the [Account overview page](https://quantum.ibm.com/account).
-</LegacyContent>
-<CloudContent>
-You must use the CRN to specify an instance to use; either when initializing the service or when sending the workload to a QPU.  The instance's CRN is listed on the [Platform dashboard](https://quantum.cloud.ibm.com/). Before running the below code, follow the steps to [save an account.](/guides/cloud-setup#cloud-save)
-</CloudContent>
-<LegacyContent>
+
 ```python
 
 # Optional: List all the instances you can access.
@@ -149,14 +130,16 @@ If you do not specify an instance, the code will select one in the following ord
 2. If your account has access to multiple instances but only one can access the requested QPU, the instance with access is selected.
 3. In all other cases, the code selects the first instance other than the Open Plan instance that has access to the quantum computer.
 </Admonition>
+
 </LegacyContent>
 <CloudContent>
+You must use the CRN to specify an instance to use; either when initializing the service or when sending the workload to a QPU.  The instance's CRN is listed on the [Platform dashboard](https://quantum.cloud.ibm.com/). Before running the below code, follow the steps to [save an account.](/guides/cloud-setup#cloud-save)
+
 ```python
 # Specify an instance at service level. This becomes the default unless overwritten.
 service = QiskitRuntimeService(instance="<CRN>")
 backend1 = service.backend("<QPU-name>")
 ```
-</CloudContent>
 
 <span id="add-instance"></span>
 ## Add an instance
@@ -165,9 +148,9 @@ backend1 = service.backend("<QPU-name>")
    <span id="regions"></span>
    <Admonition type="note" title="About regions">
    The instance will be created in the selected region. This region determines these important characteristics:
-     * The region determines which QPUs are available.
-     * The jobs' classical computation, such as compilation, takes place in the region.
-     * The user's workflow data remains in the region.
+     * Which QPUs are available.
+     * Where the jobs' classical computation, such as compilation, takes place.
+     * Where the user's workflow data remains.
 
     The workflow data includes the input circuits, circuit parameters, and quantum computation results.  It does not include metadata, such as number of shots, size of circuits, or other job statistics.
 
@@ -184,24 +167,7 @@ backend1 = service.backend("<QPU-name>")
 1. Click **Create instance**. You can now view the instance on the Instances page (if you have set up multiple plans on your account, each plan type has its own tab on the Instances table).
 
 A "collaborators" access group is automatically created for this instance. Users added to this access group can use the time allocated to this instance. You can [modify or create additional access groups](/docs/guides/access-groups) by using the IBM Cloud console.
-
-
-## Edit an instance and its allocation
-
-Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) page. To edit the instance, click the overflow menu at the end the instance's row, and select Edit details. In the modal that opens, you can edit the name of the instance, the number of minutes allocated to the instance, and which compute resources the instance can access.
-
-<LegacyContent>
-## Leave an instance
-
-To leave an instance, visit the instance list on your [Account page.](https://quantum.ibm.com/account) Select the instance you wish to leave, then select the overflow menu and choose **Leave instance**.
-
-![Screenshot of the Account page.](/docs/images/guides/instances/leaving1.avif "Leave instance")
-</LegacyContent>
-
-## Delete an instance
-
-Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) page. To delete the instance, click the overflow menu at the end the instance's row, and select **Delete**.
-
+</CloudContent>
 
 ## Next steps
 
