You can leave an instance on classic

--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -168,6 +168,13 @@ backend1 = service.backend("<QPU-name>")
 
 A "collaborators" access group is automatically created for this instance. Users added to this access group can use the time allocated to this instance. You can [modify or create additional access groups](/docs/guides/access-groups) by using the IBM Cloud console.
 </CloudContent>
+<LegacyContent>
+## Leave an instance
+
+To leave an instance, visit the instance list on your [Account page.](https://quantum.ibm.com/account) Select the instance you wish to leave, then select the overflow menu and choose **Leave instance**.
+
+![Screenshot of the Account page.](/docs/images/guides/instances/leaving1.avif "Leave instance")
+</LegacyContent>
 
 ## Next steps
 
