You can't specify the instance in the backend

--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -138,7 +138,7 @@ You must use the CRN to specify an instance to use; either when initializing the
 ```python
 # Specify an instance at service level. This becomes the default unless overwritten.
 service = QiskitRuntimeService(instance="<CRN>")
-backend1 = service.backend("<QPU-name>")
+backend = service.backend("<QPU-name>")
 ```
 
 <span id="add-instance"></span>
